--- a/login.html
+++ b/login.html
@@ -20,12 +20,12 @@
             <input type="password" id="inputPw">
             <label id="labelPw" for="inputPw">비밀번호</label>
             <div class="pwShow">
-              <button type="button" id="pwShow-btn">
+              <button type="button" id="pwShow-btn" >
                 비밀번호 표시
               </button>
             </div>
           </div>
-          <button id="loginBtn" type="submit">로그인</button>
+          <button id="loginBtn" type="button">로그인</button>
         </form>
         <div class="passwordFind">
           <a href="#">비밀번호를 잊으셨나요?</a>
