--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
             <div class="search-img"></div>
             <label for="searching" class="search-label">검색</label>
           </div>
+          <div class="searching-close"></div>
         </div>
         <ul class="nav-icons">
           <li class="navicon">
